crates/wasm-cli/tests/snapshots/test__cli_registry_inspect_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Inspect the metadata of a package on the registry

Usage: wasm registry inspect [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>  The reference to inspect (e.g., ghcr.io/example/component:tag)

Options:
      --json     Output in JSON encoding
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
